--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
 		"php": ">=5.3.6",
 		"pattern-lab/core": "0.*",
 		"pattern-lab/patternengine-twig": "0.*",
-		"pattern-lab/styleguidekit-twig-default": "0.*"
+		"pattern-lab/styleguidekit-twig-default": "0.*",
+		"twig/extensions": "^1.3@dev"
 	},
 	"scripts": {
 		"post-create-project-cmd": [
